--- a/client/main.html
+++ b/client/main.html
@@ -1,21 +1,14 @@
 <template name="main">
     {{> navigation}}
     {{> header}}
-    
-    <div class="container">
-        {{> yield}}
-    </div>
 
+    <body>
+	    {{> yield}}
+    </body>
     {{> footer}}
 </template>
 
-<template name="home">
-  {{> playercard}}
-</template>
 
-<template name="register">
-  <h1>Register</h1>
-</template>
 
 
 
