nav update, separate modal form

--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,10 @@
 <template name="main">
-    {{> navigation}}
+	<nav>
+    	{{> navigation}}
+    </nav>
+    <header>
     {{> header}}
-
+    </header>
     <body>
 	    {{> yield}}
     </body>
